# rest-adapter-rust

./: Cargo.toml  README.md
rest_adapter/: Cargo.toml
rest_adapter/src/: adapter_configuration.rs  content.rs  error.rs  id.rs  lib.rs  page.rs  prelude_internal.rs  request_helper.rs  uri_builder.rs
rest_adapter/src/adapter/: adapter_trait.rs  mod.rs  rest_adapter.rs
rest_adapter/src/content/: content_repository.rs  mod.rs
rest_adapter/src/factory/: mod.rs
rest_adapter/src/http_client/: fixture_client.rs  http_client_trait.rs  mod.rs  reqwest_client.rs
rest_adapter/src/page/: mod.rs  pages_repository.rs
rest_adapter/src/repository/: mod.rs
rest_adapter_test/: Cargo.toml
rest_adapter_test/resources/: test-persons.json
rest_adapter_test/src/: bin.rs  cli_error.rs  ui.rs
