[package]
name = "rest_adapter"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2018"

[lib]
name = "rest_adapter"
path = "src/lib.rs"

[dependencies]
log = "^0.4.8"
serde = "^1.0.0"
serde_json = "^1.0.0"
reqwest = "^0.9.19"
url = "^1.2"

[dev-dependencies]
simplelog = "^0.6.0"

